# customer_mcp

./: .gitignore  README.md  ai_agent.ipynb  main.py  pyproject.toml
mcp_sample/: mcp_local.py  mcp_remote.py  mcp_server.py  retriever.py
